--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 VITE_API_BASE_URL=http://localhost:5000/api
 VITE_APP_NAME=V89 DETE-BED
+
+# Firebase Configuration - แทนที่ค่าเหล่านี้ด้วยค่าจริงจาก Firebase Console
+VITE_FIREBASE_API_KEY=AIzaSyD2upnYE6vZjMckOZb8txoa7Aw9XQN5Ddw
+VITE_FIREBASE_AUTH_DOMAIN=v89-dete-bed.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=v89-dete-bed
+VITE_FIREBASE_STORAGE_BUCKET=v89-dete-bed.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=205243534757
+VITE_FIREBASE_APP_ID=1:205243534757:web:27c925df6bddc8b9b8ac4c
+VITE_FIREBASE_MEASUREMENT_ID=G-KZFQQ6MSDV
